--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+  <%= render 'shared/header' %>
+  <p class="notice"><%= notice %></p>
+  <p class="notice"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
