--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,4 +1,6 @@
 div
   p= question.title
   p= question.body
-  = link_to 'Delete', question_path(question), method: :delete
+  - unless current_user.nil?
+    - if current_user.author?(question)
+      = link_to 'Delete', question_path(question), method: :delete
