add destroy tests for question

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,8 +1,7 @@
 = render 'shared/errors', resource: @question
 = render 'shared/errors', resource: @answer
 
-h1= @question.title
-p= @question.body
+= render @question
 div
   h3 Answers 
   = render @question.answers
