--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -3,4 +3,4 @@ div
   p= question.body
   - unless current_user.nil?
     - if current_user.author?(question)
-      = link_to 'Delete', question_path(question), method: :delete
+      = link_to 'Delete question', question_path(question), method: :delete
