--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,6 +1,14 @@
-div
-  p= question.title
-  p= question.body
-  - unless current_user.nil?
-    - if current_user.author?(question)
-      = link_to 'Delete question', question_path(question), method: :delete
+- if question.persisted?
+  div< id="question-#{question.id}"
+    p= question.title
+    p= question.body
+    = link_to 'Open answers', question_path(question)
+    - if user_signed_in? && current_user.author?(question)
+      = link_to 'Delete', question_path(question), remote: true, method: :delete
+      = link_to 'Edit', '#', class: 'edit-question-link', data: { question_id: question.id }
+      = form_with model: question, local: false, class: 'hidden', html: { id: "edit-question-#{question.id}" } do |f|
+        = f.label :title
+        = f.text_area :title
+        = f.label :body
+        = f.text_area :body
+        = f.submit 'Save'
