--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -4,6 +4,11 @@
       p= 'Best answer'
     p= answer.title
     p= answer.body
+    - if answer.files.attached?
+      - answer.files.each do |file|
+        p= link_to file.filename.to_s, url_for(file)
+        - if user_signed_in? && current_user.author?(answer)
+          p= link_to 'Delete', file_answer_destroy_path(file.id), remote: true, method: :delete
     - unless answer.best
       - if user_signed_in? && current_user.author?(answer.question)
         = link_to 'Choose as best', nominate_answer_path(answer), remote: true, method: :patch, class: 'best-answer-link'
@@ -15,4 +20,6 @@
         = f.text_area :title
         = f.label :body
         = f.text_area :body
+        = f.label :files
+        = f.file_field :files, multiple: true
         = f.submit 'Save'
