--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -2,6 +2,11 @@
   div< id="question-#{question.id}"
     p= question.title
     p= question.body
+    - if question.files.attached?
+      - question.files.each do |file|
+        p= link_to file.filename.to_s, url_for(file)
+        - if user_signed_in? && current_user.author?(question)
+          p= link_to 'Remove', file_question_destroy_path(file.id), remote: true, method: :delete
     = link_to 'Open answers', question_path(question)
     - if user_signed_in? && current_user.author?(question)
       = link_to 'Delete', question_path(question), remote: true, method: :delete
@@ -11,4 +16,6 @@
         = f.text_area :title
         = f.label :body
         = f.text_area :body
+        = f.label :files
+        = f.file_field :files, multiple: true
         = f.submit 'Save'
