--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,5 +1,10 @@
 h1= @question.title
 p= @question.body
+
+- if @question.files.attached?
+  - @question.files.each do |file|
+    p= link_to file.filename.to_s, url_for(file)
+
 div
   h3 Answers
   .answers
@@ -11,4 +16,6 @@ div
     = f.text_field :title
     = f.label :body
     = f.text_area :body
+    = f.label :files
+    = f.file_field :files, multiple: true
     = f.submit 'Answer'
