--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -4,6 +4,10 @@
       p= 'Best answer'
     p= answer.title
     p= answer.body
+    p Links:
+    ul
+      .links
+        = render answer.links
     - if answer.files.attached?
       - answer.files.each do |file|
         p= link_to file.filename.to_s, url_for(file)
@@ -22,4 +26,10 @@
         = f.text_area :body
         = f.label :files
         = f.file_field :files, multiple: true
+        p Links:
+        p
+          = f.fields_for :links do |link|
+            = render('links/link_fields', f: link) unless link.object.persisted?
+          .links
+            = link_to_add_association 'Add link', f, :links, { partial: 'links/link_fields' }
         = f.submit 'Save'
