--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -18,4 +18,10 @@
         = f.text_area :body
         = f.label :files
         = f.file_field :files, multiple: true
+        p Links:
+        p
+          = f.fields_for :links do |link|
+            = render('links/link_fields', f: link) unless link.object.persisted?
+          .links
+            = link_to_add_association 'add link', f, :links, { partial: 'links/link_fields' }
         = f.submit 'Save'
