--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -4,6 +4,10 @@ p= @question.body
 - if @question.files.attached?
   - @question.files.each do |file|
     p= link_to file.filename.to_s, url_for(file)
+p Links:
+ul
+  .links
+    = render @question.links
 
 div
   h3 Answers
@@ -18,4 +22,10 @@ div
     = f.text_area :body
     = f.label :files
     = f.file_field :files, multiple: true
+    p Links:
+    p
+      = f.fields_for :links do |link|
+        = render 'links/link_fields', f: link
+      .links
+        = link_to_add_association 'add link', f, :links, { partial: 'links/link_fields' }
     = f.submit 'Answer'
