--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -8,5 +8,6 @@ header
         span Hi,
         b = current_user.email
         = link_to 'Log out', destroy_user_session_path, method: :delete
+        = link_to 'Achievements', achievements_path
       - else
       = link_to 'Login', new_user_session_path
