--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -8,6 +8,7 @@
         - if user_signed_in? && current_user.author?(question)
           p= link_to 'Remove', file_question_destroy_path(file.id), remote: true, method: :delete
     = link_to 'Open answers', question_path(question)
+    = render 'shared/votes', resource: question
     - if user_signed_in? && current_user.author?(question)
       = link_to 'Delete', question_path(question), remote: true, method: :delete
       = link_to 'Edit', '#', class: 'edit-question-link', data: { question_id: question.id }
