--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -26,3 +26,11 @@
           .links
             = link_to_add_association 'add link', f, :links, { partial: 'links/link_fields' }
         = f.submit 'Save'
+    .comments
+      h5 Comments:
+      = render question.comments
+      .new-comment
+        = form_with model: [question, question.comments.build], local: false, format: :js do |f|
+          = f.label :body, 'Comment:'
+          = f.text_area :body
+          = f.submit 'Comment'
