--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -11,13 +11,13 @@
     - if answer.files.attached?
       - answer.files.each do |file|
         p= link_to file.filename.to_s, url_for(file)
-        - if user_signed_in? && current_user.author?(answer)
+        - if can?(:manage, answer)
           p= link_to 'Delete', file_answer_destroy_path(file.id), remote: true, method: :delete
     - unless answer.best
-      - if user_signed_in? && current_user.author?(answer.question)
+      - if can?(:manage, answer.question)
         = link_to 'Choose as best', nominate_answer_path(answer), remote: true, method: :patch, class: 'best-answer-link'
     = render 'shared/votes', resource: answer
-    - if user_signed_in? && current_user.author?(answer)
+    - if can?(:manage, answer)
       = link_to 'Delete', answer_path(answer), remote: true, method: :delete
       = link_to 'Edit', '#', class: 'edit-answer-link', data: { answer_id: answer.id }
       = form_with model: answer, local: false, class: 'hidden', html: { id: "edit-answer-#{answer.id}" } do |f|
