--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -5,11 +5,11 @@
     - if question.files.attached?
       - question.files.each do |file|
         p= link_to file.filename.to_s, url_for(file)
-        - if user_signed_in? && current_user.author?(question)
+        - if can?(:manage, question)
           p= link_to 'Remove', file_question_destroy_path(file.id), remote: true, method: :delete
     = link_to 'Open answers', question_path(question)
     = render 'shared/votes', resource: question
-    - if user_signed_in? && current_user.author?(question)
+    - if can?(:manage, question)
       = link_to 'Delete', question_path(question), remote: true, method: :delete
       = link_to 'Edit', '#', class: 'edit-question-link', data: { question_id: question.id }
       = form_with model: question, local: false, class: 'hidden', html: { id: "edit-question-#{question.id}" } do |f|
